--- a/OI_files/oi3.css
+++ b/OI_files/oi3.css
@@ -56,7 +56,7 @@ i.navbar-toggler-icon,
     background-color: #ffffff;
 }
 
-.navbar-nav .lnk.nav-link:hover::after {
+.navbar-nav .nav-link:hover::after {
     background-color: #888888;
 }
 
@@ -64,6 +64,35 @@ i.navbar-toggler-icon,
     color: #ffffff;
     text-decoration: none;
     font-size: 14px;
+}
+
+.offcanvas-header img {
+    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.offcanvas-header .btn-close {
+    color: #fff;
+}
+
+.offcanvas-body .lnk.nav-link,
+.offcanvas-body .dropdown-toggle {
+    /* color: #1B1C1F; */
+    font-size: 20px;
+    padding: 8px 16px;
+    margin-bottom: 4px;
+    font-weight: 600;
+}
+
+.offcanvas-header,
+.offcanvas-body {
+    background-color: #1B1C1F;
+}
+
+.offcanvas-body {
+    padding-top: 50px;
 }
 
 .dropdown-menu {
@@ -194,6 +223,17 @@ button.owner-btn img {
     color: #666666;
 }
 
+.reservation .price {
+    color: #666666;
+}
+
+.reservation .price .currency {
+    font-size: 20px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 600;
+    color: #444444;
+}
+
 .ad-details .price {
     color: #666666;
 }
@@ -212,6 +252,12 @@ button.owner-btn img {
     background-color: #fff;
 }
 
+.reservation .reviews,
+.reservation .rating {
+    margin: 0;
+    color: #353535;
+}
+
 .modal {
     backdrop-filter: blur(4px);
 }
@@ -227,6 +273,12 @@ button.owner-btn img {
     max-width: 400px;
     margin: 0 auto;
     max-height: 100%;
+}
+
+.owner-preview.details-page {
+    padding: 16px;
+    margin: 0;
+    margin-top: 16px;
 }
 
 .owner-preview .btn-close {
@@ -323,9 +375,127 @@ footer {
     font-size: 18px;
 }
 
+.image-gallery {
+    position: relative;
+}
+
+.see-more {
+    border: none;
+    border-radius: 8px;
+    padding: 4px 8px;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    width: 180px;
+    justify-content: center;
+    opacity: 0.95;
+    box-shadow: 0 0 3px rgba(200, 200, 200, 0.5);
+}
+
+.see-more:hover {
+    background-color: #efefef;
+    opacity: 1;
+}
+
 .image-gallery img {
     border-radius: 16px;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.amenity {
+    display: flex;
+    padding: 20px;
+    border: 1px solid #cccccc;
+    border-radius: 8px;
+    align-items: center;
+    font-family: 'Lato', sans-serif;
+    margin: 8px;
+}
+
+.amenity i {
+    margin-right: 8px;
+}
+
+.amenity.more {
+    font-weight: 600;
+    border: none;
+}
+
+.reservation {
+    margin-top: 16px;
+    max-width: 400px;
+    background-color: #fff;
+    box-shadow: 0 0 8px rgba(200, 200, 200, 0.5);
+    border-radius: 16px;
+    padding: 16px;
+}
+
+.reservation #checkIn {
+    border-radius: 0;
+    border-top-left-radius: 8px;
+}
+
+.reservation #checkOut {
+    border-radius: 0;
+    border-top-right-radius: 8px;
+}
+
+.reservation #guests {
+    border-radius: 0;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+@media screen and (max-width:385px) {
+    .reservation #checkIn {
+        border-radius: 0;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+    }
+
+    .reservation #checkOut {
+        border-radius: 0;
+    }
+
+    .reservation #guests {
+        border-radius: 0;
+        border-bottom-right-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+}
+
+.reservation input {
+    border: none;
+    outline: 1px solid #cccccc;
+}
+
+.caption {
+    color: #666666;
+    font-size: 14px;
+}
+
+.caption a {
+    color: #1B1C1F;
+}
+
+.pricing p {
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    margin-bottom: 8px;
+}
+
+.description {
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 16px;
+}
+
+p.h5 {
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
 }
