--- a/OI_files/oi3.css
+++ b/OI_files/oi3.css
@@ -499,3 +499,39 @@ p.h5 {
     font-family: Montserrat, sans-serif;
     font-weight: bold;
 }
+
+.stats .h5 {
+    font-weight: normal;
+}
+
+.rating-breakdown {
+    margin-top: 16px;
+    font-size: 14px;
+    font-family: Montserrat, sans-serif;
+}
+
+.rating-breakdown .col {
+    height: 40px;
+}
+
+.small,
+.rating-breakdown small {
+    font-size: 12px;
+}
+
+.rating-breakdown small {
+    font-weight: 600;
+}
+
+img.circular {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.stats-header {
+    font-family: Montserrat, sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+}
